--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@ table {
   border-radius: 6px;
   object-fit: cover;
   flex-shrink: 0;
+  transition: all 0.25s ease;  /* 🔥 eklenen satır */
 }
 
 .game-meta {
