--- a/index.html
+++ b/index.html
@@ -305,6 +305,16 @@ table {
   transition: all 0.25s ease;
   cursor: pointer;              /* tıklanabilir hissetsin */
 }
+    /* Oyun ismine hover & tıklanabilir efekt */
+.game-name {
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+
+.game-cell:hover .game-name {
+  color: #facc15;
+}
+
 
 /* Hover efekti: aynı butonlar gibi lift + glow */
 .game-cell:hover .game-thumb {
