--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,15 @@ function renderTables() {
         <div class="game-cell">
           ${thumbHtml}
           <div class="game-text">
-            <div class="game-name">${g.name}</div>
+            <td class="col-name">
+  <div class="game-cell">
+    ${thumbHtml}
+    <div class="game-text">
+      <div class="game-name">${g.name}</div>
+      <span class="badge-hot">Sıcak</span>
+    </div>
+  </div>
+</td>
             <span class="badge-hot">Sıcak</span>
           </div>
         </div>
