--- a/index.html
+++ b/index.html
@@ -1181,11 +1181,7 @@ function renderTables() {
   <div class="game-cell">
     ${thumbHtml}
     <div class="game-text">
-      <div class="game-name">${g.name}</div>
-      <span class="badge-hot">Sıcak</span>
-    </div>
-  </div>
-</td>
+     <div class="game-name" data-play-id="${g.id}">${g.name}</div>
             <span class="badge-hot">Sıcak</span>
           </div>
         </div>
