--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@ function renderTables() {
         <div class="game-cell">
           ${thumbHtml}
           <div class="game-text">
-            <div class="game-name">${g.name}</div>
+            <div class="game-name" data-play-id="${g.id}">${g.name}</div>
             <span class="badge-cold">Soğuk</span>
           </div>
         </div>
