--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@ button:hover,
     <img src="https://telegram.org/img/t_logo.svg" alt="Telegram" class="footer-tg-img" />
   </a>
   <div class="footer-note">
-    iletisim@acikmedya.com
+    iletisim@acikoyun.com
   </div>
 </footer>
   <!-- Sıcak Alarmı: push -->
