--- a/index.html
+++ b/index.html
@@ -881,6 +881,17 @@ button:hover,
          class="strip-gif-img" />
   </a>
 </section>
+      <!-- HOT & COLD ARASI BETMATIK BANNER -->
+<section class="card strip-gif-card">
+  <a href="https://cutt.ly/CteZTK69" target="_blank">
+    <img
+      src="banners/betmatik728x90.gif"
+      alt="Betmatik Banner"
+      class="strip-gif-img"
+      style="max-width:728px; width:100%; height:auto; display:block; margin:0 auto;"
+    />
+  </a>
+</section>
       <!-- COLD TABLE -->
       <section class="card table-card">
         <div class="table-header">
