--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@ table {
 }
 
 .fs-arrow {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* Yanıp sönme efekti sadece metne */
@@ -870,9 +870,9 @@ button:hover,
     <!-- MOBİL FREESPIN CTA MODÜLÜ -->
   <div class="fs-mobile-cta-wrapper">
     <button class="fs-mobile-cta" id="fs-mobile-cta">
-      <span class="fs-arrow">⬇</span>
+      <span class="fs-arrow">▼</span>
       <span class="fs-mobile-cta-text">FREESPIN TEKLİFLERİNİ GÖR</span>
-      <span class="fs-arrow">⬇</span>
+      <span class="fs-arrow">▼</span>
     </button>
   </div>
 
