--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@ button:hover,
   <div class="fs-mobile-cta-wrapper">
     <button class="fs-mobile-cta" id="fs-mobile-cta">
       <span class="fs-arrow">▼</span>
-      <span class="fs-mobile-cta-text">FREESPIN TEKLİFLERİNİ GÖR</span>
+      <span class="fs-mobile-cta-text">TIKLA VE FREESPIN TEKLİFLERİNİ GÖR</span>
       <span class="fs-arrow">▼</span>
     </button>
   </div>
