--- a/index.html
+++ b/index.html
@@ -690,6 +690,52 @@ table {
         max-width: none;
       }
     }
+    /* --- Mobil Telegram CTA --- */
+.tg-mobile-cta-wrapper {
+  display: none;
+  max-width: 1280px;
+  margin: 6px auto 0;
+  padding: 0 18px 4px;
+}
+
+.tg-mobile-cta {
+  width: 100%;
+  border-radius: 999px;
+  border: 1px solid #34aaf4;
+  background: linear-gradient(135deg, #29a9eb, #0088cc);
+  color: white;
+  font-size: 13px;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px 12px;
+  cursor: pointer;
+  text-transform: uppercase;
+  box-shadow: 0 4px 14px rgba(0, 136, 204, 0.35);
+}
+
+.tg-arrow {
+  font-size: 15px;
+  opacity: 0.95;
+}
+
+.tg-mobile-cta-text {
+  animation: tgBlink 1.1s linear infinite;
+}
+@keyframes tgBlink {
+  0%, 100% { opacity: 1; }
+  50%      { opacity: 0.4; }
+}
+
+@media (max-width: 980px) {
+  .tg-mobile-cta-wrapper {
+    display: block;
+  }
+}
+
     /* --- Mobil Freespin CTA --- */
 .fs-mobile-cta-wrapper {
   display: none;          /* varsayılan: görünmesin */
@@ -870,6 +916,14 @@ button:hover,
       <span class="ad-cta">Üye Ol</span>
     </a>
   </div>
+  <!-- MOBİL TELEGRAM CTA MODÜLÜ -->
+<div class="tg-mobile-cta-wrapper">
+  <button class="tg-mobile-cta" id="tg-mobile-cta">
+    <span class="tg-arrow">▶</span> <!-- sağa bakan ok -->
+    <span class="tg-mobile-cta-text">TELEGRAM TOPLULUĞUMUZA KATIL</span>
+    <span class="tg-arrow">◀</span> <!-- sola bakan ok -->
+  </button>
+</div>
     <!-- MOBİL FREESPIN CTA MODÜLÜ -->
   <div class="fs-mobile-cta-wrapper">
     <button class="fs-mobile-cta" id="fs-mobile-cta">
@@ -1423,6 +1477,13 @@ function bindFreespinButtons() {
     bindAdBanners();
     bindFreespinButtons();
     bindHotAlertButton(); // 🔥 burası
+     // ✅ Telegram CTA tıklanınca yönlendir
+const tgCta = document.getElementById("tg-mobile-cta");
+if (tgCta) {
+  tgCta.addEventListener("click", () => {
+    window.open("https://t.me/acikoyuncom", "_blank");
+  });
+}
          // ✅ Mobil Freespin CTA tıklanınca freespin bölümüne kaydır
     const fsCta = document.getElementById("fs-mobile-cta");
     if (fsCta) {
