--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@ orderHot.forEach((id, index) => {
       { site: "Xslot",   user: "***q9", amount: "15.800.000 TL", url: "https://cutt.ly/NteEarVX" },
       { site: "Joybet",     user: "***ak", amount: "4.120.000 TL", url: "https://www.joybet669.pro/affiliates/?btag=559047" },
       { site: "Otobet", user: "***c7", amount: "3.575.000 TL", url: "https://cutt.ly/Xtelei33" },
-      { site: "Otobet",     user: "***ve", amount: "2.584.496 TL", url: "https://cutt.ly/Xtelei33" },
+      { site: "Betmatik",     user: "***ve", amount: "2.584.496 TL", url: "https://cutt.ly/CteZTK69" },
       { site: "Ligobet",    user: "***k9", amount: "1.058.168 TL", url: "https://cutt.ly/QtelcFFs" }
     ];
     const container = document.getElementById("winners-list");
