--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@ function bindFreespinButtons() {
 const tgCta = document.getElementById("tg-mobile-cta");
 if (tgCta) {
   tgCta.addEventListener("click", () => {
-    window.open("https://t.me/acikoyuncom", "_blank");
+    window.open("https://t.me/acikoyuntelegram", "_blank");
   });
 }
          // ✅ Mobil Freespin CTA tıklanınca freespin bölümüne kaydır
