--- a/index.html
+++ b/index.html
@@ -1470,7 +1470,7 @@ function bindFreespinButtons() {
     const btn = document.querySelector("#hot-alert .btn-alert-primary");
     if (!btn) return;
 
-    const url = btn.dataset.url || "https://shoort.in/otobetgiris";
+    const url = btn.dataset.url || "https://cutt.ly/Xtelei33";
     btn.addEventListener("click", () => {
       window.open(url, "_blank");
     });
