--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>acikoyun · Sıcak / Soğuk Slotlar</title>
+  <title>Açık Oyun Nedir? · Sıcak / Soğuk Slot Analizi · acikoyun.com</title>
+  <meta name="description" content="Açık oyun, slot oyuncularının en çok merak ettiği soruyu yanıtlar: Şu an hangi oyun açık? acikoyun.com, sıcak ve soğuk slot analizleriyle canlı RTP, heat skoru ve son max win verilerini sunan ilk Türkçe platformdur.">
+  <link rel="canonical" href="https://acikoyun.com/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     :root {
