--- a/index.html
+++ b/index.html
@@ -937,6 +937,18 @@ button:hover,
 
   <main class="page">
     <section>
+      <!-- SEO H1 + Açıklama -->
+<h1 style="font-size:22px; font-weight:700; margin-bottom:12px;">
+  Açık Oyun · Sıcak / Soğuk Slot Analizi
+</h1>
+
+<p style="font-size:14px; color:#9ca3af; line-height:1.55; margin-bottom:22px;">
+  Açık oyun, slot oyuncularının en çok merak ettiği soruyu yanıtlar:
+  <strong>Hangi oyun şu an açık?</strong> acikoyun.com; canlı RTP, heat skoru ve 
+  son max win verileriyle popüler slotların ne kadar sıcak veya soğuk olduğunu 
+  anlık olarak gösteren ilk Türkçe platformdur.
+</p>
+<!-- SEO H1 Sonu -->
       <!-- ÜST BÖLÜM 728x90 XSLOT BANNER -->
 <section class="card strip-gif-card">
   <a href="https://cutt.ly/NteEarVX" target="_blank">
