--- a/index.html
+++ b/index.html
@@ -948,6 +948,11 @@ button:hover,
   son max win verileriyle popüler slotların ne kadar sıcak veya soğuk olduğunu 
   anlık olarak gösteren ilk Türkçe platformdur.
 </p>
+      <p style="font-size:12px; color:#6b7280; margin-top:4px; margin-bottom:18px;">
+  <a href="/acik-oyun-nedir.html" style="color:#38bdf8; text-decoration:none;">
+    Açık oyun nedir? Detaylı açıklamayı oku →
+  </a>
+</p>
 <!-- SEO H1 Sonu -->
       <!-- ÜST BÖLÜM 728x90 XSLOT BANNER -->
 <section class="card strip-gif-card">
