--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,38 @@ button:hover,
   <div class="footer-note">
     iletisim@acikoyun.com
   </div>
+  <div class="seo-links">
+  <a href="/guvenilir-casino-siteleri.html">Güvenilir Casino Siteleri</a>
+  <a href="/canli-casino-siteleri.html">Canlı Casino Siteleri</a>
+  <a href="/deneme-bonusu.html">Deneme Bonusu Veren Siteler</a>
+  <a href="/kumar-bahis-siteleri.html">Kumar Bahis Siteleri</a>
+  <a href="/en-cok-kazandiran-kumar-siteleri.html">En Çok Kazandıran Siteler</a>
+  <a href="/bedava-slot-oyunlari.html">Bedava Slot Oyunları</a>
+</div>
+
+<style>
+  .seo-links {
+    margin-top: 25px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px 14px;
+    justify-content: center;
+    opacity: 0.35;               /* çok görünür değil */
+    font-size: 10px;             /* ultra küçük */
+  }
+
+  .seo-links a {
+    color: #6b7280;              /* gri, göze batmaz */
+    text-decoration: none;
+    transition: all 0.25s ease;
+  }
+
+  .seo-links a:hover {
+    opacity: 0.85;
+    color: #facc15;              /* hover'da sadece hafif altın sarısı */
+  }
+</style>
 </footer>
   <!-- Sıcak Alarmı: push -->
   <section class="card alert-card sidebar-card" id="hot-alert">
